feat: change strip

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     </script>
     <style>
 * {
-  --top-strip-height: 3rem;
+  --top-strip-height: 2.8rem;
 }
 
 .top-strip {
@@ -28,7 +28,6 @@
     width: 100vw;
     background: #80a3d5;
     color: #fff;
-    padding: .4rem;
   }
 
   .top-strip a {
@@ -45,7 +44,7 @@
   </head>
   <body>
     <div class="top-strip">
-      <div>Username and password: <b>aeria</b> -- database is reset every 30 minutes (<a href="https://github.com/aeria-org/demo">view on Github</a>)</div>
+      <div>Username and password: <b>aeria</b> -- database is reseted every 30 minutes (<a href="https://github.com/aeria-org/demo">view on Github</a>)</div>
     </div>
     <div class="app-container">
       <div id="app"></div>
